--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -81,8 +81,8 @@
                       <object class="GtkBox" id="song_details">
                         <property name="orientation">vertical</property>
                         <property name="valign">start</property>
-                        <property name="margin_top">24</property>
-                        <property name="height_request">80</property>
+                        <property name="margin_top">16</property>
+                        <property name="height_request">100</property>
                         <child>
                           <object class="GtkLabel" id="song_title">
                             <property name="ellipsize">end</property>
@@ -92,20 +92,23 @@
                           </object>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="song_artist">
-                            <property name="ellipsize">end</property>
-                            <property name="margin_top">4</property>
+                          <object class="GtkToggleButton" id="song_artist">
+                            <property name="halign">center</property>
+                            <property name="has_frame">false</property>
+                            <property name="margin_top">8</property>
                             <style>
-                              <class name="dim-label"/>
+                              <class name="accent"/>
+                              <class name="caption"/>
                             </style>
                           </object>
                         </child>
                         <child>
-                          <object class="GtkLabel" id="song_album">
-                            <property name="ellipsize">end</property>
-                            <property name="margin_top">4</property>
+                          <object class="GtkToggleButton" id="song_album">
+                            <property name="halign">center</property>
+                            <property name="has_frame">false</property>
                             <style>
-                              <class name="dim-label"/>
+                              <class name="accent"/>
+                              <class name="caption"/>
                             </style>
                           </object>
                         </child>
