--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -3,7 +3,7 @@
   <requires lib="gtk" version="4.0"/>
   <template class="MusicPreferencesWindow" parent="AdwPreferencesWindow">
     <property name="default-width">480</property>
-    <property name="default-height">300</property>
+    <property name="default-height">340</property>
     <property name="search-enabled">false</property>
     <property name="modal">true</property>
     <child>
@@ -29,6 +29,32 @@
                 <property name="activatable_widget">music_dir_btn</property>
                 <child>
                   <object class="GtkButton" id="music_dir_btn">
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="AdwPreferencesGroup">
+            <child>
+              <object class="AdwActionRow">
+                <property name="title" translatable="true">Prefer pipewire audio sink</property>
+                <property name="activatable_widget">pipewire_btn</property>
+                <child>
+                  <object class="GtkSwitch" id="pipewire_btn">
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="title" translatable="true">Show audio peak when playing</property>
+                <property name="activatable_widget">peak_btn</property>
+                <child>
+                  <object class="GtkSwitch" id="peak_btn">
                     <property name="valign">center</property>
                   </object>
                 </child>
