--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -12,8 +12,8 @@
           <object class="AdwPreferencesGroup">
             <child>
               <object class="AdwActionRow" id="tracker_row">
-                <property name="title" translatable="true">Load music from Tracker database</property>
-                <property name="subtitle" translatable="true">Try if the music are not stored on SSD</property>
+                <property name="title" translatable="true">Load music from tracker service</property>
+                <property name="subtitle" translatable="true">Try if the music files are on a slow disk</property>
                 <property name="activatable_widget">tracker_btn</property>
                 <child>
                   <object class="GtkSwitch" id="tracker_btn">
@@ -24,8 +24,7 @@
             </child>
             <child>
               <object class="AdwActionRow">
-                <property name="title" translatable="true">Music directory</property>
-                <property name="subtitle" translatable="true">Load music from local directory</property>
+                <property name="title" translatable="true">Load music from local directory</property>
                 <property name="activatable_widget">music_dir_btn</property>
                 <child>
                   <object class="GtkButton" id="music_dir_btn">
