--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -91,7 +91,7 @@
                     <property name="margin_top">16</property>
                     <child>
                       <object class="GtkImage" id="cover_image">
-                        <property name="pixel_size">256</property>
+                        <property name="pixel_size">240</property>
                       </object>
                     </child>
                     <child>
@@ -139,6 +139,12 @@
   </template>
 
   <menu id="primary_menu">
+    <section>
+      <item>
+        <attribute name="label" translatable="yes">_Export Cover</attribute>
+        <attribute name="action">win.export-cover</attribute>
+      </item>
+    </section>
     <section>
       <item>
         <attribute name="label" translatable="yes">_Preferences</attribute>
