--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -23,6 +23,7 @@
                     <child type="start">
                       <object class="GtkToggleButton" id="search_btn">
                         <property name="icon_name">edit-find-symbolic</property>
+                        <property name="tooltip-text" translatable="yes">Search</property>
                       </object>
                     </child>
                     <child type="center">
@@ -34,6 +35,7 @@
                       <object class="GtkToggleButton" id="shuffle_btn">
                         <property name="icon_name">media-playlist-shuffle-symbolic</property>
                         <property name="action_name">app.shuffle</property>
+                        <property name="tooltip-text" translatable="yes">Toggle Shuffle</property>
                       </object>
                     </child>
                   </object>
@@ -73,12 +75,14 @@
                       <object class="GtkToggleButton" id="reveal_btn">
                         <property name="icon_name">sidebar-show-symbolic</property>
                         <property name="active" bind-source="flap" bind-property="reveal-flap" bind-flags="sync-create|bidirectional"/>
+                        <property name="tooltip-text" translatable="yes">Toggle Playlist</property>
                       </object>
                     </child>
                     <child type="end">
                       <object class="GtkMenuButton">
                         <property name="icon_name">open-menu-symbolic</property>
                         <property name="menu_model">primary_menu</property>
+                        <property name="tooltip-text" translatable="yes">Main Menu</property>
                       </object>
                     </child>
                   </object>
