show song index/size as title

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -23,12 +23,15 @@
                     <child type="start">
                       <object class="GtkToggleButton" id="search_btn">
                         <property name="icon_name">edit-find-symbolic</property>
+                        <property name="active" bind-source="search_entry" bind-property="visible" bind-flags="sync-create|bidirectional"/>
                         <property name="tooltip-text" translatable="yes">Search</property>
                       </object>
                     </child>
                     <child type="center">
-                      <object class="GtkEntry" id="search_entry">
-                        <property name="hexpand">true</property>
+                      <object class="GtkLabel" id="index_title">
+                        <style>
+                          <class name="caption-heading"/>
+                        </style>
                       </object>
                     </child>
                     <child type="end">
@@ -38,6 +41,14 @@
                         <property name="tooltip-text" translatable="yes">Toggle Shuffle</property>
                       </object>
                     </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkEntry" id="search_entry">
+                    <property name="hexpand">true</property>
+                    <property name="margin_start">6</property>
+                    <property name="margin_end">6</property>
+                    <property name="visible">false</property>
                   </object>
                 </child>
                 <child>
