sort by album/artist/title

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -35,10 +35,10 @@
                       </object>
                     </child>
                     <child type="end">
-                      <object class="GtkToggleButton" id="shuffle_btn">
-                        <property name="icon_name">media-playlist-shuffle-symbolic</property>
-                        <property name="action_name">app.shuffle</property>
-                        <property name="tooltip-text" translatable="yes">Toggle Shuffle</property>
+                      <object class="GtkMenuButton" id="sort_btn">
+                        <property name="icon_name">audio-x-generic-symbolic</property>
+                        <property name="menu_model">sort_menu</property>
+                        <property name="tooltip-text" translatable="yes">Sort Mode</property>
                       </object>
                     </child>
                   </object>
@@ -173,6 +173,35 @@
       <item>
         <attribute name="label" translatable="yes">_About G4Music</attribute>
         <attribute name="action">app.about</attribute>
+      </item>
+    </section>
+  </menu>
+
+  <menu id="sort_menu">
+    <section>
+      <item>
+        <attribute name="icon">media-optical-cd-audio-symbolic</attribute>
+        <attribute name="label" translatable="yes">By Album</attribute>
+        <attribute name="action">app.sort</attribute>
+        <attribute name="target" type="u">0</attribute>
+      </item>
+      <item>
+        <attribute name="icon">system-users-symbolic</attribute>
+        <attribute name="label" translatable="yes">By Artist</attribute>
+        <attribute name="action">app.sort</attribute>
+        <attribute name="target" type="u">1</attribute>
+      </item>
+      <item>
+        <attribute name="icon">audio-x-generic-symbolic</attribute>
+        <attribute name="label" translatable="yes">By Title</attribute>
+        <attribute name="action">app.sort</attribute>
+        <attribute name="target" type="u">2</attribute>
+      </item>
+      <item>
+        <attribute name="icon">media-playlist-shuffle-symbolic</attribute>
+        <attribute name="label" translatable="yes">Shuffle</attribute>
+        <attribute name="action">app.sort</attribute>
+        <attribute name="target" type="u">3</attribute>
       </item>
     </section>
   </menu>
