--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -27,20 +27,8 @@
           <object class="AdwPreferencesGroup">
             <property name="title" translatable="yes">Music Store</property>
             <child>
-              <object class="AdwActionRow" id="tracker_row">
-                <property name="title" translatable="yes">Load music from tracker service</property>
-                <property name="subtitle" translatable="yes">Try if the music files are on a slow disk</property>
-                <property name="activatable_widget">tracker_btn</property>
-                <child>
-                  <object class="GtkSwitch" id="tracker_btn">
-                    <property name="valign">center</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
               <object class="AdwActionRow">
-                <property name="title" translatable="yes">Load music from local folder</property>
+                <property name="title" translatable="yes">Load music from folder</property>
                 <property name="activatable_widget">music_dir_btn</property>
                 <child>
                   <object class="GtkButton" id="music_dir_btn">
