--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -12,7 +12,7 @@
             <property name="title" translatable="yes">Appearance</property>
             <child>
               <object class="AdwActionRow" id="dark_theme">
-                <property name="title" translatable="yes">Force dark theme</property>
+                <property name="title" translatable="yes">Prefer dark theme</property>
                 <property name="activatable_widget">dark_btn</property>
                 <child>
                   <object class="GtkSwitch" id="dark_btn">
@@ -25,7 +25,7 @@
         </child>
         <child>
           <object class="AdwPreferencesGroup">
-            <property name="title" translatable="yes">Music Store</property>
+            <property name="title" translatable="yes">Music Location</property>
             <child>
               <object class="AdwActionRow">
                 <property name="title" translatable="yes">Load music from folder</property>
@@ -55,7 +55,7 @@
             <property name="title" translatable="yes">Playback</property>
             <child>
               <object class="AdwActionRow">
-                <property name="title" translatable="yes">Prefer pipewire audio sink</property>
+                <property name="title" translatable="yes">Use pipewire audio sink</property>
                 <property name="subtitle" translatable="yes">Experimental</property>
                 <property name="activatable_widget">pipewire_btn</property>
                 <child>
@@ -67,7 +67,7 @@
             </child>
             <child>
               <object class="AdwActionRow">
-                <property name="title" translatable="yes">Show audio peak when playing</property>
+                <property name="title" translatable="yes">Show audio peak level</property>
                 <property name="activatable_widget">peak_btn</property>
                 <child>
                   <object class="GtkSwitch" id="peak_btn">
